 * Renamed $g_bug_view_all_page $g_bug_view_all_page $g_bug_view_all_page
   to      $g_view_bug_all_page $g_view_bug_page $g_view_bug_advanced_page
 * Renamed corresponding .php3 files
 * Added profile management
 * Profiles can be used for advanced bug submission
 * Made enum displays (category, status, etc) easier to maintain via print_lists();
 * Removed the destructive DROP table in db_generate.sql
 * Added 'feedback' status - indicates that it requires more information
 * Added a confirmation before an admin can delete an account
 * Split manage user actions into separate files
 * Added several ; in core_API.php that caused errors on some servers
 * Added view next/prev XYZ bugs on bug viewing page
 * Added a string_display() function to prevent HTML tags from screwing up display
 * Modified version to be an enum.
 * Added version editing capability

12.06.2000	-	0.10.2

 * Fixed Reporter Field on update page
 * Fixed variable error preventing Bugnote addition
 * Fixed minor viewing bugs related to \ characters
 * Added documentation section
 * Summary is now useful
 * Fixed a few issues with the Advanced bug view
 * Tidied up most of the code
 * Temporarily 'solved' (mostly) a serious issue with consistency on
   bugnote and bug report additions

12.03.2000	-	0.10.1

 * Fixed some category bugs

12.03.2000	-	0.10.0

 * Moved constant config settings to config_inc.php3
 * Better news formatting
 * Added protected flag for accounts
 * Color values controlled by variables
 * Page variables controlled by variables
 * Fixed error with emails not displaying in link on main page
 * Edit categories from Manage section
 * Viewing filters
 * supports php and php3 extensions (php3/php4)

12.01.2000	-	0.9.1 (Quick fixes)

 * Fixed a link
 * Fixed reporter not showing up properly
 * The "enabled" flag on accounts works

12.01.2000	-	0.9.0

 * User management
 * Account maintenance
 * Access levels
 * News system
 * Basic functionality