@@ -7,19 +7,34 @@
 <? include( "core_API.php" ) ?>
 <? login_cookie_check() ?>
 <?
+	db_mysql_connect( $g_hostname, $g_db_username, $g_db_password, $g_database_name );
+
+	### Some sensible defaults
+	if ( empty( $f_limit_view ) ) {
+		$f_limit_view = $g_default_limit_view;
+	}
+	if ( empty( $f_show_last ) ) {
+		$f_show_last = $g_default_show_last;
+	}
+
 	if ( $f_action="update" ) {
-		if ( $f_save_prefs=="on" ) {
-			setcookie( $g_hide_resolved_cookie, $f_hide_resolved, $g_time_length );
-			setcookie( $g_view_limit_cookie, $f_view_limit, $g_time_length );
-		}
-		else {
-			setcookie( $g_hide_resolved_cookie, $f_hide_resolved );
-			setcookie( $g_view_limit_cookie, $f_view_limit );
-		}
+		## update preferences
+		$query = "UPDATE $g_mantis_user_pref_table
+				SET hide_resolved='$f_hide_resolved', limit_view='$f_limit_view',
+					show_last='$f_show_last', advanced_report='$f_advanced_report',
+					advanced_view='$f_advanced_view'
+				WHERE id='$f_id'";
+		$result = mysql_query( $query );
 	}
 	else if ( $f_action="reset" ) {
-		setcookie( $g_hide_resolved_cookie );
-		setcookie( $g_view_limit_cookie );
+		## reset to defaults
+		$query = "UPDATE $g_mantis_user_pref_table
+				SET hide_resolved='$g_default_hide_resolved', limit_view='$g_default_limit_view',
+					show_last='$g_default_show_last',
+					advanced_report='$g_default_advanced_report',
+					advanced_view='$g_default_advanced_view'
+				WHERE id='$f_id'";
+		$result = mysql_query( $query );
 	}
 	else {
 		echo "ERROR: invalid action";
