@@ -7,9 +7,11 @@
 <?
 	if ( !isset( $g_string_cookie_val ) ) {
 		### required for variables to get picked up
-		global 	$g_string_cookie_val, $g_mantis_user_table, $g_path,
+		global 	$g_string_cookie_val, $g_path,
+				$g_mantis_user_table, $g_mantis_user_pref_table,
 				$g_hostname, $g_db_username, $g_db_password, $g_database_name,
-				$g_main_page, $g_view_bug_all_page, $g_report_bug_page,
+				$g_main_page, $g_view_bug_all_page,
+				$g_report_bug_page, $g_report_bug_advanced_page,
 				$g_summary_page, $g_account_page, $g_manage_page,
 				$g_news_menu_page, $g_logout_page;
 	}
@@ -29,9 +31,17 @@
 <font face=Verdana size=-1>
 	<a href="<? echo $g_path.$g_main_page ?>">Main</a> |
 	<a href="<? echo $g_path.$g_view_bug_all_page ?>">View Bugs</a> |
-<? if ( $t_access_level!="viewer" ) { ?>
+<?
+	if ( $t_access_level!="viewer" ) {
+		if ( get_user_value( $g_mantis_user_pref_table, "advanced_view" )=="on" ) {
+?>
+	<a href="<? echo $g_path.$g_report_bug_advanced_page ?>">Report Bug</a> |
+	<? } else { ?>
 	<a href="<? echo $g_path.$g_report_bug_page ?>">Report Bug</a> |
-<? } ?>
+<?
+		}
+	}  # end report/viewer if
+?>
 	<a href="<? echo $g_path.$g_summary_page ?>">Summary</a> |
 	<a href="<? echo $g_path.$g_account_page ?>">Account</a> |
 <? if ( $t_access_level=="administrator" ) { ?>
